<resources>
    <string name="app_name">Greener Lawn</string>
    <string name="submit">Submit</string>
    <string name="hour">Hour</string>
    <string name="hourHint"><font size="6"></font>Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="zone_setting_item_configure">...</string>
    <string name="main_underMenu">Schedules</string>
    <string name="main_zones">zones</string>
    <string name="main_quickon">quick on</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_drawer">Drawer</string>

    <!--Weather Strings -->
    <string name="OPEN_WEATHER_MAP_API_KEY">bea4b929ff482f02d7ab334b6e015467</string>
    <string name="current_temp">Current temperature: </string>
    <string name="current_humidity">Humidity: </string>
    <string name="current_condition">Condition: </string>
    <string name="current_rain">Rainfall: </string>
    <string name="last_rain">Last Rain: </string>
    <string name="weather">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_user">Some Juan</string>
    <string name="nav_email">AndroidDev@gmail.com</string>

    <!--zone item-->
    <string name="zoneItemPic_ImageView_Description">Zone Specific Thumbnail</string>
    <string name="user_image">Your image</string>

    <!--Settings Strings-->
    <string name="location">Location</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="device_serial">Device Serial:</string>
    <string name="new_information">new information</string>
    <string name="enter_new_serial_number">Enter new serial number:</string>

    <!-- Firebase UI Strings -->
    <string name="fui_progress_dialog_signing_up">Creating your Green Lawn new account...</string>

    <!-- Create Schedule Strings-->
    <string name="schedule_name">Schedule Name</string>
    <string name="start_time">Start Time</string>
    <string name="set_duration">Duration</string>
    <string name="choose_days">Days</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="choose_zones">Choose Zones</string>
    <string name="repeat_switch">Repeat</string>

    <!-- Time picker buttons -->
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="settings_drawer">Settings</string>

</resources>
