<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hourPicker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_edge_border"
    android:backgroundTint="@color/primary_light_accent"
    android:visibility="visible">


    <Button
        android:id="@+id/submitDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/primary"
        android:onClick="submitResult"
        android:text="@string/submit"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/numberPickerHourDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/submitDuration"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerMinuteDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/numberPickerMinuteDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/submitDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberPickerHourDuration" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hour"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerHourDuration"
        app:layout_constraintEnd_toStartOf="@+id/minutes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minute"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerMinuteDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hours"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
